footer no fundo

--- a/recifut/style.css
+++ b/recifut/style.css
@@ -45,7 +45,7 @@ a{
     color: white;
 }
 footer{
-    margin-top: 200px;
     font-family: 'Noto Serif Khojki', serif;
     font-size: 0.8rem;
+    margin-top: 30vh;
 }
